fix: add additional data on redeemed rewards and user history
